# lambda-scanner

./: README.md  pyproject.toml
src/: scanner.py
