[project]
name = "scanner"
version = "0.1.0"
description = ""
authors = [
    {name = "cp_solutions",email = "cp_solutions@godaddy.com"}
]
readme = "README.md"
requires-python = "3.13"
dependencies = [
    "boto3 (>=1.37.9,<2.0.0)",
    "botocore (>=1.37.9,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
